<resources>

    <string name="app_name">ByteStore</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ByteStore</string>
    <string name="btnCategorias">Categorias</string>
    <string name="txtlogo" />
    <string name="btnTopApps">Top Apps</string>
    <string name="btnInstalados">Instalados</string>
    <string name="btnHisotrial">Historial</string>
    <string name="scrollCentral"></string>
    <string name="txtBuscar"></string>
    <string name="APK1">APK1</string>
    <string name="EncabezadoAPK1">Paquetes en APK1 disponibles</string>
    <string name="txt1">HOLA</string>
    <string name="texto_Gracias">&quot;Gracias por su visita&quot;</string>
    <string name="Mensaje_btnTopApps">&quot;Se mostraran las aplicaciones mas descargadas&quot;</string>
    <string name="Mensaje_btnHistorial">Se podra visualizar el historial de descargas</string>
    <string name="Mensaje_btnSistema">Se observan apks de la categoria Sistemas</string>
    <string name="Mensaje_btnOficina">Se observan apks de la categoria Oficina</string>
    <string name="Mensaje_btnJuegos">Se observan apks de la categoria Juegos</string>
    <string name="Mensaje_btnInstalados">Se podra visualizar las apks instaladas</string>
    <string name="categorias">Categorias</string>
    <string name="topapps">Top Apps</string>
    <string name="installados">Instalados</string>
    <string name="historial">Historial</string>
    <string name="logo">Logo</string>
    <string name="barra">Barra de Botones</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_info_app">InfoApp</string>
    <string name="download">Descargar</string>
    <string name="buscar">Buscar</string>

</resources>